# jaxtra

./: .gitattributes  .gitignore  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  UPSTREAMING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new_primitive.yml
.github/workflows/: ci.yml  claude.yml  conventional-pr-linter.yaml  pre-commit-cron-update.yaml  wheels.yml
benchmarks/: bench_banded.py  bench_ldl.py  bench_least_squares.py  bench_ormqr.py
benchmarks/results/: bench_banded.csv  bench_banded_gpu.csv  bench_ldl.csv  bench_ldl_gpu.csv  bench_least_squares.csv  bench_least_squares_gpu.csv  bench_ormqr.csv
csrc/: jaxtra_cuda_module.cc  jaxtra_module.cc  lapack_kernels.cc  lapack_kernels.h  lapack_utils.h
csrc/gpu/jaxlib/gpu/: solver_interface.cc  solver_kernels_ffi.cc  sparse_kernels_ffi.cc  vendor.h
docs/: api.rst  benchmarks.md  benchmarks_ldl.md  conf.py  index.md  requirements.txt
jaxlib/cpu/: jaxtra_module.cc  lapack_kernels.cc  lapack_kernels.h  lapack_utils.h
jaxlib/cuda/: jaxtra_cuda_module.cc  jaxtra_hybrid_module.cc
jaxlib/gpu/: hybrid_kernels_ffi.cc  hybrid_kernels_ffi.h  linalg_kernels.cu.cc  solver_handle_pool.cc  solver_handle_pool.h  solver_interface.cc  solver_interface.h  solver_kernels_ffi.cc  solver_kernels_ffi.h  sparse_handle_pool.cc  sparse_handle_pool.h  sparse_kernels_ffi.h  vendor.h
jaxtra/: __init__.py  _core.py  _numpy_lapack.py
jaxtra/_src/lax/: linalg.py
jaxtra/_src/lib/: __init__.py  gpu_hybrid.py  gpu_solver.py  gpu_sparse.py  lapack.py
jaxtra/lax/: __init__.py  linalg.py
jaxtra/scipy/: __init__.py  linalg.py
tests/: test_ldl.py  test_ormqr.py  test_pentadiagonal.py  test_pentadiagonal_solveh.py
