[build-system]
requires = [
  "scikit-build-core>=0.9",
  "nanobind>=2.0",  # same binding library as jaxlib; capsule::data() avoids name check
  "jax",            # provides XLA FFI headers via jax.ffi.include_dir()
  "jaxlib",
]
build-backend = "scikit_build_core.build"

[project]
name = "jaxtra"
version = "0.1.0"
description = "Native JAX extensions for LAPACK routines and GPU-accelerated linear algebra via XLA FFI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "numpy",
]

[project.optional-dependencies]
# Runtime CUDA libraries as Python packages (from NVIDIA's pip channel).
# These are the shared libraries that _jaxtra_cuda.so links against at runtime.
# The build itself still requires the CUDA development toolkit on the build machine.
gpu = [
  "nvidia-cusolver-cu12>=11.0; platform_system=='Linux' and platform_machine=='x86_64'",
  "nvidia-cuda-runtime-cu12>=12.0; platform_system=='Linux' and platform_machine=='x86_64'",
]
test = ["pytest"]

# ---------------------------------------------------------------------------
# scikit-build-core options
# ---------------------------------------------------------------------------
[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["jaxtra"]
# In editable mode, write the compiled .so into the source tree so that the
# editable finder can locate it without a separate install step.
editable.mode = "inplace"

[tool.scikit-build.cmake.define]
# Allow overriding LAPACK location at build time, e.g. for cibuildwheel.
# CMAKE_PREFIX_PATH = ""
# CUDA build mode: auto (detect) | ON (require) | OFF (skip).
# Default is "auto": builds _jaxtra_cuda.so whenever nvcc/CUDAToolkit is present.
# Override: JAXTRA_CUDA=OFF pip install jaxtra  (force CPU-only)
#           JAXTRA_CUDA=ON  pip install jaxtra  (fail if CUDA is absent)
JAXTRA_CUDA = {env = "JAXTRA_CUDA", default = "auto"}

# ---------------------------------------------------------------------------
# cibuildwheel — build manylinux + macOS wheels in CI
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# Only build CPython, skip PyPy and 32-bit.
build = "cp310-* cp311-* cp312-* cp313-*"
skip  = "*-win32 *-manylinux_i686 *-musllinux*"

# Install build dependencies inside each wheel environment.
before-build = "pip install jax jaxlib nanobind scikit-build-core"

# On Linux, no system LAPACK needed: loaded at runtime from scipy.
[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
manylinux-x86_64-image = "manylinux_2_28"

# On macOS, use Accelerate (ships with Xcode, no extra install needed).
[tool.cibuildwheel.macos]
environment = { LDFLAGS = "-framework Accelerate" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

# Windows: link against OpenBLAS from conda-forge or vcpkg.
[tool.cibuildwheel.windows]
before-all = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
