[build-system]
requires = [
  "scikit-build-core>=0.9",
  "nanobind>=2.0",  # same binding library as jaxlib; capsule::data() avoids name check
  "jax",            # provides XLA FFI headers via jax.ffi.include_dir()
  "jaxlib",
]
build-backend = "scikit_build_core.build"

[project]
name = "jaxtra"
version = "0.1.0"
description = "Native JAX extensions for LAPACK routines and GPU-accelerated linear algebra via XLA FFI"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "jpbrodrick89", email = "jonathan.brodrick@simulation.science" },
]
keywords = ["jax", "lapack", "linear-algebra", "xla-ffi", "cuda", "cusolver"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 3 - Stable",
]
dependencies = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "numpy",
]

[project.optional-dependencies]
# Runtime CUDA libraries as Python packages (from NVIDIA's pip channel).
# These are the shared libraries that _jaxtra_cuda.so links against at runtime.
# The build itself still requires the CUDA development toolkit on the build machine.
gpu = [
  "nvidia-cusolver-cu12>=11.0; platform_system=='Linux' and platform_machine=='x86_64'",
  "nvidia-cuda-runtime-cu12>=12.0; platform_system=='Linux' and platform_machine=='x86_64'",
]
test = ["pytest"]
docs = [
  "sphinx>=7.3",
  "sphinx-book-theme>=1.1",
  "myst-parser>=3.0",
  "sphinx-copybutton>=0.5",
]

[project.urls]
Documentation = "https://jaxtra.readthedocs.io"
Repository = "https://github.com/jpbrodrick89/jaxtra"
Issues     = "https://github.com/jpbrodrick89/jaxtra/issues"
Changelog  = "https://github.com/jpbrodrick89/jaxtra/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# scikit-build-core options
# ---------------------------------------------------------------------------
[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["jaxtra"]
# In editable mode, write the compiled .so into the source tree so that the
# editable finder can locate it without a separate install step.
editable.mode = "inplace"

[tool.scikit-build.cmake.define]
# Allow overriding LAPACK location at build time, e.g. for cibuildwheel.
# CMAKE_PREFIX_PATH = ""
# CUDA build mode: auto (detect) | ON (require) | OFF (skip).
# Default is "auto": builds _jaxtra_cuda.so whenever nvcc/CUDAToolkit is present.
# Override: JAXTRA_CUDA=OFF pip install jaxtra  (force CPU-only)
#           JAXTRA_CUDA=ON  pip install jaxtra  (fail if CUDA is absent)
JAXTRA_CUDA = {env = "JAXTRA_CUDA", default = "auto"}

# ---------------------------------------------------------------------------
# cibuildwheel — build manylinux + macOS wheels in CI
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# Only build CPython, skip PyPy and 32-bit.
build = "cp311-* cp312-* cp313-* cp314-*"
skip  = "*-win32 *-manylinux_i686 *-musllinux*"

# Install build dependencies inside each wheel environment.
before-build = "pip install jax jaxlib nanobind scikit-build-core"

# On Linux, no system LAPACK needed: loaded at runtime from scipy.
[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
manylinux-x86_64-image = "manylinux_2_28"

# On macOS, use Accelerate (ships with Xcode, no extra install needed).
[tool.cibuildwheel.macos]
environment = { LDFLAGS = "-framework Accelerate" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

# Windows: link against OpenBLAS from conda-forge or vcpkg.
[tool.cibuildwheel.windows]
before-all = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE"]

# ---------------------------------------------------------------------------
# uv — dev dependencies (included in lock file so build uses locked jax)
# ---------------------------------------------------------------------------
# scikit-build-core and nanobind are listed here so they appear in uv.lock.
# CI uses --no-build-isolation-package jaxtra to build against the locked
# jax/jaxlib; without this the PEP 517 build-isolation env resolves jax
# independently of the lock file and can pull in a newer jax whose XLA FFI
# API version is incompatible with the locked jaxlib at runtime.
[tool.uv]
dev-dependencies = [
  "scikit-build-core>=0.9",
  "nanobind>=2.0",
]

# ---------------------------------------------------------------------------
# ruff — linting (mirrors JAX's ruff config)
# ---------------------------------------------------------------------------
[tool.ruff]
preview = true
exclude = [".git", "build", "__pycache__"]
line-length = 80
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = [
  "ASYNC",
  "B9",
  "C",
  "E101",
  "E112",
  "E113",
  "E115",
  "E117",
  "E225",
  "E227",
  "E228",
  "F",
  "W",
  "YTT",
]
ignore = [
  "B901", # yield and return value in generator function
  "B903", # class could be dataclass or namedtuple
  "B904", # raise with from clause inside except block
  "B905", # zip without explicit strict parameter
  "C408", # unnecessary collection call
  "C417", # unnecessary map usage
  "C420", # unnecessary dict comprehension for iterable
  "C901", # object names too complex
]

[tool.ruff.lint.mccabe]
max-complexity = 18

# ---------------------------------------------------------------------------
# mypy — type checking
# ---------------------------------------------------------------------------
[tool.mypy]
show_error_codes = true
disable_error_code = "attr-defined, name-defined, annotation-unchecked"
no_implicit_optional = true
warn_redundant_casts = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
  "jax.*",
  "jaxlib.*",
  "matplotlib.*",
  "numpy.*",
  "scipy.*",
]
ignore_missing_imports = true
